<resources>
    <string name="app_name">MyApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">간단 계산기</string>
    <string name="strBtnAdd">더하기</string>
    <string name="strBtnSub">빼기</string>
    <string name="strBtnMul">곱하기</string>
    <string name="strBtnDiv">나누기</string>
    <string name="Edit1">숫자1</string>
    <string name="Edit2">숫자2</string>
    <string name="textResult">계산결과 : </string>
</resources>
