<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:orientation="vertical">
    <TableRow>
        <EditText
            android:id="@+id/Edit1"
            android:layout_span="5"
            android:hint="@string/Edit1"
            android:text=""
            />
    </TableRow>
    <TableRow>
        <EditText
            android:id="@+id/Edit2"
            android:layout_span="5"
            android:hint="@string/Edit2"
            android:text=""
            />
    </TableRow>
    <TableRow>
        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum0"
            android:text="0"/>

        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum1"
            android:text="1"/>
        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum2"
            android:text="2"/>
        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum3"
            android:text="3"/>
        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum4"
            android:text="4"/>
    </TableRow>
    <TableRow>
        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum5"
            android:text="5"/>
        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum6"
            android:text="6"/>
        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum7"
            android:text="7"/>
        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum8"
            android:text="8"/>
        <Button
            android:layout_width="60dp"
            android:id="@+id/BtnNum9"
            android:text="9"/>
    </TableRow>

    <TableRow>
        <Button
            android:layout_span="5"
            android:id="@+id/btnAdd"
            android:text="@string/strBtnAdd"
            android:layout_margin="5dp"
            ></Button>
    </TableRow>
    <TableRow>
        <Button
            android:layout_span="5"
            android:id="@+id/btnSub"
            android:text="@string/strBtnSub"
            android:layout_margin="5dp"
            ></Button>
    </TableRow>
    <TableRow>
        <Button
            android:layout_span="5"
            android:id="@+id/btnMul"
            android:text="@string/strBtnMul"
            android:layout_margin="5dp"
            ></Button>
    </TableRow>
    <TableRow>
        <Button
            android:layout_span="5"
            android:id="@+id/btnDiv"
            android:text="@string/strBtnDiv"
            android:layout_margin="5dp"
            ></Button>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_span="5"
            android:id="@+id/TextResult"
            android:textSize="30dp"
            android:textColor="#FF0000"
            android:layout_margin="5dp"
            android:text="@string/textResult"
            />
    </TableRow>
</GridLayout>