<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:rowCount="9"
    android:columnCount="5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/Edit1"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="5"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:hint="@string/Edit1"
        android:text=""
        />
    <EditText
        android:id="@+id/Edit2"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="5"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:hint="@string/Edit2"
        android:text=""
        />

    <Button
        android:layout_column="0"
        android:layout_row="2"
        android:layout_width="70dp"
        android:id="@+id/BtnNum0"
        android:text="0"/>
    <Button
        android:layout_column="1"
        android:layout_row="2"
        android:layout_width="70dp"
        android:id="@+id/BtnNum1"
        android:text="1"/>
    <Button
        android:layout_column="2"
        android:layout_row="2"
        android:layout_width="70dp"
        android:id="@+id/BtnNum2"
        android:text="2"/>
    <Button
        android:layout_column="3"
        android:layout_row="2"
        android:layout_width="70dp"
        android:id="@+id/BtnNum3"
        android:text="3"/>
    <Button
        android:layout_column="4"
        android:layout_row="2"
        android:layout_width="70dp"
        android:id="@+id/BtnNum4"
        android:text="4"/>
    <Button
        android:layout_column="0"
        android:layout_row="3"
        android:layout_width="70dp"
        android:id="@+id/BtnNum5"
        android:text="5"/>
    <Button
        android:layout_column="1"
        android:layout_row="3"
        android:layout_width="70dp"
        android:id="@+id/BtnNum6"
        android:text="6"/>
    <Button
        android:layout_column="2"
        android:layout_row="3"
        android:layout_width="70dp"
        android:id="@+id/BtnNum7"
        android:text="7"/>
    <Button
        android:layout_column="3"
        android:layout_row="3"
        android:layout_width="70dp"
        android:id="@+id/BtnNum8"
        android:text="8"/>
    <Button
        android:layout_column="4"
        android:layout_row="3"
        android:layout_width="70dp"
        android:id="@+id/BtnNum9"
        android:text="9"/>


    <Button
        android:layout_column="0"
        android:layout_row="4"
        android:layout_columnSpan="5"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/btnAdd"
        android:text="@string/strBtnAdd"
        android:layout_margin="5dp"
        ></Button>
    <Button
        android:layout_column="0"
        android:layout_row="5"
        android:layout_columnSpan="5"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/btnSub"
        android:text="@string/strBtnSub"
        android:layout_margin="5dp"
        ></Button>
    <Button
        android:layout_column="0"
        android:layout_row="6"
        android:layout_columnSpan="5"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/btnMul"
        android:text="@string/strBtnMul"
        android:layout_margin="5dp"
        ></Button>
    <Button
        android:layout_column="0"
        android:layout_row="7"
        android:layout_columnSpan="5"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/btnDiv"
        android:text="@string/strBtnDiv"
        android:layout_margin="5dp"
        ></Button>

    <TextView
        android:layout_column="0"
        android:layout_row="8"
        android:layout_columnSpan="5"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/TextResult"
        android:textSize="30dp"
        android:textColor="#FF0000"
        android:layout_margin="5dp"
        android:text="@string/textResult"
        android:focusable="true"
        />
</GridLayout>